--- a/ocp.toml
+++ b/ocp.toml
@@ -2,6 +2,8 @@ name = "OCP"
 input_folder = "./opencascade"
 output_folder = "./OCP"
 
+additional_files = ["FindOpenCascade.cmake"]
+
 pats = ["{}_*.hxx","{}.hxx"]
 
 modules = ["Standard",
