--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,13 @@ trigger:
 
 pr: none
 
+resources:
+  repositories:
+    - repository: templates
+      type: github
+      name: CadQuery/conda-packages
+      endpoint: CadQuery
+
 jobs:
 - template: build-bindings-job.yml
   parameters:
