--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -46,11 +46,6 @@ jobs:
       echo "##vso[task.setvariable variable=OUTPUT;isOutput=true]$OUTPUT"
     displayName: 'Read output dir from the config file'
     name: 'conf'
-    
-  - bash: |
-      source activate cpp-py-bindgen && \      
-      echo "$(conf.OUTPUT)"
-    displayName: 'Test previous step'
 
   - bash: |
       source activate cpp-py-bindgen && \
@@ -62,18 +57,18 @@ jobs:
   - task: CopyFiles@2
     inputs:
       contents: 'out*.pkl'
-      targetFolder: $(OUTPUT)
+      targetFolder: $(conf.OUTPUT)
     displayName: 'Copy pkl outputs'
 
   - task: PublishBuildArtifacts@1
     inputs:
-      pathtoPublish: $(OUTPUT)
+      pathtoPublish: $(conf.OUTPUT)
       artifactName: OCP_src
     displayName: 'Publish resulting code'
 
   - bash: |
       source activate cpp-py-bindgen && \
-      cd $OUTPUT && \
+      cd "$(conf.OUTPUT)" && \
       CXX=$(CXX) cmake -B ../build -S . -G Ninja && \
       cmake --build build -j $(n_cores) && \
       rm -rf build/CMakeFiles
@@ -87,6 +82,6 @@ jobs:
 
   - bash: |
       source activate cpp-py-bindgen && \
-      cd $(OUTPUT)/build && \
+      cd "$(conf.OUTPUT)"/build && \
       LD_DEBUG=libs python -c"import OCP"
     displayName: 'Test'
