Correct find syntax

--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -33,7 +33,7 @@ jobs:
       displayName: 'Install g++8 and gl headers'
 
   - ${{ if contains(parameters.vmImage, 'macOS') }}:
-    - bash: sudo find -name type_traits 
+    - bash: sudo find / -name type_traits 
 
   - bash: |
       source activate cpp-py-bindgen && \
