Print gcc includes

--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -28,9 +28,12 @@ jobs:
       conda env create -f ${{ parameters.conda_env_file }}
     displayName: 'Prepare conda environment'
 
-  - ${{ if contains(parameters.vmImage, 'Ubuntu') }}:  
+  - ${{ if contains(parameters.vmImage, 'Ubuntu') }}:
     - bash: sudo apt-get install $(CXX) mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev
       displayName: 'Install g++8 and gl headers'
+  
+  - ${{ if contains(parameters.vmImage, 'macOS') }}:    
+    - bash: `gcc -print-prog-name=cc1plus` -v
 
   - bash: |
       source activate cpp-py-bindgen && \
