--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -33,7 +33,8 @@ jobs:
       displayName: 'Install g++8 and gl headers'
   
   - ${{ if contains(parameters.vmImage, 'macOS') }}:    
-    - bash: `gcc -print-prog-name=cc1plus` -v
+    - bash: $(gcc -print-prog-name=cc1plus) -v
+      displayName: 'Print includes'
 
   - bash: |
       source activate cpp-py-bindgen && \
