--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -66,16 +66,25 @@ jobs:
       artifactName: OCP_src
     displayName: 'Publish resulting code'
 
-  - bash: |
+  - ${{ if not(contains(parameters.vmImage, 'win')) }}:
+    - bash: |
       source activate cpp-py-bindgen && \
       cd "$(conf.OUTPUT)" && \
       cmake -B ../build -S . -G Ninja && \
       cmake --build ../build -j $(n_cores) && \
       rm -rf ../build/CMakeFiles
-    displayName: 'Compile'
-    - ${{ if not(contains(parameters.vmImage, 'Ubuntu')) }}:
+      displayName: 'Compile'
       env:
         CXX: $(CXX)
+        
+  - ${{ if contains(parameters.vmImage, 'win') }}:
+    - bash: |
+      source activate cpp-py-bindgen && \
+      cd "$(conf.OUTPUT)" && \
+      cmake -B ../build -S . -G Ninja && \
+      cmake --build ../build -j $(n_cores) && \
+      rm -rf ../build/CMakeFiles
+      displayName: 'Compile'
 
   - task: PublishBuildArtifacts@1
     inputs:
