--- a/ocp.toml
+++ b/ocp.toml
@@ -346,7 +346,8 @@ parsing_header = '''#include <Standard_Handle.hxx>
                 '/usr/local/Cellar/gcc@8/8.3.0_2/lib/gcc/8/gcc/x86_64-apple-darwin19/8.3.0/include-fixed',
                 '/Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk/usr/include',
                 '/Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk/System/Library/Frameworks',
-                '/Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk/System/Library/Frameworks//OpenGL.framework/Versions/A/Headers/']
+                '/Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk/System/Library/Frameworks//OpenGL.framework/Versions/A/Headers/',
+                '/usr/local/include']
 
 [Operators]
 
