--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -39,10 +39,29 @@ jobs:
       displayName: 'Search for GL'
       
   - ${{ if contains(parameters.vmImage, 'win') }}:
+    - script: |
+       choco install -y msys2
+       c:\tools\msys64\usr\bin\bash.exe -lc "c:\tools\msys64\usr\bin\pacman --noconfirm -Syyuu"
+       c:\tools\msys64\usr\bin\bash.exe -lc "c:\tools\msys64\usr\bin\pacman --noconfirm -Syuu"
+       rem refreshenv
+      displayName: 'Install MSYS2'
+    
+    - script: |
+       c:\tools\msys64\usr\bin\bash.exe -lc "echo 'Hello World' && uname -a"
+       c:\tools\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -S mingw-w64-x86_64-toolchain"
+       c:\tools\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -S make"
+       c:\tools\msys64\usr\bin\bash.exe -lc "mingw-w64-ninja"
+       exit
+      displayName: 'Install MinGW64'
+    
+    - powershell: Write-Host "##vso[task.prependpath]c:\tools\msys64\usr\bin"
+      displayName: 'Add MinGW64 to PATH'
+    
     - bash: |
         gcc --version  && \
         echo | g++ -E -Wp,-v -
       displayName: 'GCC version check'
+
       
   - bash: |
       source activate cpp-py-bindgen && \
