--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -42,6 +42,7 @@ jobs:
        c:\tools\msys64\usr\bin\bash.exe -lc "echo 'Hello World' && uname -a"
        c:\tools\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -S mingw-w64-x86_64-toolchain"
        c:\tools\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -S make"
+       c:\tools\msys64\usr\bin\bash.exe -lc "find c:/tools/msys64/ -iname gcc"
        exit
       displayName: 'Install MinGW64'
     
