Add correct path

--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -42,11 +42,11 @@ jobs:
        c:\tools\msys64\usr\bin\bash.exe -lc "echo 'Hello World' && uname -a"
        c:\tools\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -S mingw-w64-x86_64-toolchain"
        c:\tools\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -S make"
-       c:\tools\msys64\usr\bin\bash.exe -lc "find c:/tools/msys64/ -iname gcc"
+       c:\tools\msys64\usr\bin\bash.exe -lc "find c:/tools/msys64/ -iname \*gcc\*"
        exit
       displayName: 'Install MinGW64'
     
-    - powershell: Write-Host "##vso[task.prependpath]c:/tools/msys64/usr/bin"
+    - powershell: Write-Host "##vso[task.prependpath]c:/tools/msys64/usr/bin;c:/tools/msys64/mingw64/bin;c:/tools/msys64/mingw64/usr/bin"
       displayName: 'Add MinGW64 to PATH'
     
     - bash: |
