--- a/build-bindings-job.yml
+++ b/build-bindings-job.yml
@@ -31,7 +31,7 @@ jobs:
       displayName: 'Search for GL'
 
   - ${{ if contains(parameters.vmImage, 'win') }}:
-    - bash: ls "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build"
+    - bash: ls "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/"
       displayName: 'Find vcvars64'
 
   - template: conda-enable.yml@templates
